No batch requests in OData + HTTPS

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -4,7 +4,12 @@ appDescription=A simple walkthrough app that explains the most important concept
 
 # Hello Panel
 showHelloButtonText=Say Hello
-helloMsg=Hello {0}
-helloWord=Hello
+helloMsg=Hello World
 homePageTitle=Walkthrough
 helloPanelTitle=Hello World
+
+# Main table
+ColumnID=ID
+ColumnName=Name
+ColumnPrice=Price
+ColumnCategory=Category
