Server-based grouping and sorting

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,7 +9,8 @@ homePageTitle=Walkthrough
 helloPanelTitle=Hello World
 
 # Main table
-ColumnID=ID
-ColumnName=Name
-ColumnPrice=Price
-ColumnCategory=Category
+tableName=Products
+columnID=ID
+columnName=Name
+columnPrice=Price
+columnCategory=Category
