--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@ appTitle=Hello World
 appDescription=A simple walkthrough app that explains the most important concepts of OpenUI5
 
 # Hello Panel
-showHelloButtonText=Say Hello
+showHelloButtonText=Super button
 helloMsg=Hello World
 homePageTitle=Walkthrough
 helloPanelTitle=Hello World
